@@ -111,6 +111,7 @@ to name them here too:
 <item> jscolor.js by Jan Odvarko.
 <item> The DOMjudge logo is based on the NKP 2004 logo made by
        Erik van Sebille.
+<item> Several icons have been taken from the phpMyAdmin project.
 <item> Several M4 autoconf macros from the <htmlurl name="Autoconf archive"
        url="http://www.gnu.org/software/autoconf-archive/"> by various
        people are included under <tt>m4/</tt>.
