@@ -1,1 +1,1 @@
-/identifydeamon
+/identifydaemon
